samples/_failures_safe/1761153422_0fdf54_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_853f8423.c: In function ‘matrix_transpose’:
./samples/SAFE/__tmp_853f8423.c:142:9: error: expected ‘,’ or ‘;’ at end of input
  142 |         for (int j = 0
      |         ^~~
./samples/SAFE/__tmp_853f8423.c:142:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_853f8423.c:142:9: error: expected declaration or statement at end of input
